# yolo-people-clustering

./: .gitignore  README.md  config.py  crops_ground_truth.csv  embedding_and_clustering.py  environment.yml  find_parameters.py  preprocess_dataset.ipynb  process.py  pyproject.toml  requirements.txt  utils.py
webapp/: app.py
webapp/static/css/: style.css
webapp/static/js/: app.js
webapp/templates/: index.html
