[project]
name = "people-clustering"
version = "0.1.0"
description = ""
authors = [
    {name = "sago2693",email = "56797497+sago2693@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "faiss-cpu (==1.9.0)",
    "flask (==2.2.5)",
    "kaggle (==1.6.17)",
    "kagglehub (==0.3.4)",
    "pandas (==2.2.3)",
    "scikit-learn (==1.5.2)",
    "ultralytics (==8.3.38)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry]
package-mode = false
